@@ -1,3 +1,8 @@
+2004-07-22  Don Porter  <dgp@users.sourceforge.net>
+
+        * tests/eofchar.data (removed): Test io-61.1 now generates its own
+        * tests/io.test:        file of test data as needed.
+
 2004-07-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclEvent.c:       Correct threaded obj allocator to
